<resources>
    <string name="app_name">Gestor Gastos</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="user">Ingresa tu DNI</string>
    <string name="pass">Ingresa tu contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="addCategoria">Escribir nueva categoria</string>
    <string name="categoria_agregada">Categoria agregada</string>
    <string name="categoria_existente">Categoria ya existente</string>
    <string name="no_se_recibio_categoria">No se recibio ninguna categoria</string>
    <string name="complete_contrasena">Por favor completar contraseña</string>
    <string name="hemos_visto_cambio_contrasena">Hemos visto que ha cambiado su contraseña ¿Desea confirmar el cambio?</string>
    <string name="completar_todos_datos_para_continuar">Completar todos los campos para continuar</string>
    <string name="cambio_contrasena">Cambio Contraseña</string>
    <string name="contrasena_temporal">¡Hola! Tu contraseña temporal es: </string>
    <string name="solicitud_cambio_exitosa">Solicitud exitosa. Se ha enviado al correo del usuario una contraseña temporal.</string>
    <string name="mala_combinacion_dni_mail">Combinacion de DNI y e-mail no encontrado. Ingrese nuevamente sus datos, por favor.</string>
    <string name="enviando_mail">Enviando Email</string>
    <string name="login"></string>
    <string name="usuario_actualizado">Usuario actualizado</string>
    <string name="guardar_cambios_usuario">¿Desea guardar los cambios en este usuario?</string>
    <string name="guardar_cambios_camion">"¿Desea guardar cambios en este camion?"</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="Guardar">Guardar </string>
    <string name="camiones">Camiones</string>
    <string name="debe_estar_logueado">Debe autenticarse para ingresar</string>
    <string name="no_asignar_camion">No asignar ningun camion</string>
    <string name="dar_alta_camion">Dar de alta camion</string>
    <string name="agregar">Agregar</string>
    <string name="dar_alta_usuario">Dar de alta usuario</string>
    <string name="editar_usuario">Editar usuario</string>
    <string name="editar_viaje">Editar Viaje</string>
    <string name="viajes_completados">Viajes Completados</string>
    <string name="viajes_planeados">Viajes Planeados</string>
    <string name="agregarViaje">Viaje agregado con exito</string>
    <string name="agregarUsuario">Usuario agregado con exito</string>
    <string name="agregarGasto">Ingresar nuevo gasto</string>
    <string name="gastoAgregado">Gasto agregado con exito</string>
    <string name="gestionarCamiones">Camiones</string>
    <string name="addCamion">Agregar camion</string>
    <string name="salir">Log out</string>
    <string name="perfil">Perfil</string>
    <string name="viajes">Ver mis Viajes</string>
    <string name="mis_viajes">Mis viajes</string>
    <string name="eliminar">Eliminar</string>
    <string name="patenCamion">Patente Camion</string>
    <string name="activoCamion">Activo Camion</string>
    <string name="subCamion">Registrar nuevo camion</string>
    <string name="subCamion2">El camion se inicializara sin ningun chofer asignado</string>
    <string name="esAdmin">¿Administrador?</string>
    <string name="tituloAdmin">Administrador</string>
    <string name="gastocant">Ingresar cantidad de dinero</string>
    <string name="gastocat">Elegir una categoria</string>
    <string name="gastoadd">Agregar gasto</string>
    <string name="camion_no_asignado">Camion: No asignado</string>
    <string name="gastocatadd">Categorias</string>
    <string name="metricas">Usuarios</string>
    <string name="gestion_gastos">Gastos</string>
    <string name="gestion_viajes">Viajes</string>
    <string name="modificar_camion">¿Modificar camion?</string>
    <string name="crear_camion">Crear camion</string>
    <string name="asignar_cambion_pregunta">¿Asignar chofer a este nuevo camion?</string>
    <string name="chofer">chofer</string>
    <string name="patente_camion">Patente camion</string>
    <string name="seleccionar_categoria">Seleccionar una Categoria:</string>
    <string name="numero_viaje">Numero de viaje: </string>
    <string name="ubicacion_actual_obtenida">Ubicacion Actual Obtenida:</string>
    <string name="adjuntar_fotografia">Tomar fotografia</string>
    <string name="agregar_gasto">Agregar gasto</string>
    <string name="alta_nuevo_viaje">Dar de alta nuevo viaje</string>
    <string name="alta_viaje">Dar de alta viaje</string>
    <string name="seleccionar_conductor">Seleccionar un conductor</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="dar_alta">Dar de alta</string>
    <string name="que_te_gustaria_gestionar">¿Que te gustaria gestionar hoy?</string>
    <string name="que_te_gustaria_hacer">¿Que te gustaria hacer hoy?</string>
    <string name="completar_pwd">Por favor completar contraseña</string>
    <string name="completar_user">Por favor completar usuario</string>
    <string name="completar_campos">Por favor completar todos los campos</string>
    <string name="usuario_inactivo">Este usuario esta inhabilitado</string>
    <string name="ingreso_invalido">Usuario y/o Contraseña inválida</string>
    <string name="dos_veces">Presione 2 veces para salir</string>
    <string name="aviso">Aviso</string>
    <string name="esta_saliendo_sesion">Esta saliendo de su sesion</string>
    <string name="esta_seguro_cerrar_sesion">¿Esta seguro que desea cerrar sesión?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="Error">Error</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="se_necesita_viaje">Se necesita un viaje en curso para la carga de gastos</string>
    <string name="gasto_cantidad">Importe Gastado</string>
    <string name="gasto_categoria">Seleccionar una categoria</string>
    <string name="gasto_viaje">Numero Viaje</string>
    <string name="gasto_submit">Registrar nuevo gasto</string>
    <string name="gasto_foto">Registrar foto de factura</string>
    <string name="errorGasto">Hubo un error tratando de registrar el Gasto</string>
    <string name="cancelando_gasto">Esta cancelando la creacion de un gasto</string>
    <string name="cancelando_creacion_gasto">Esta cancelando la creacion de un gasto</string>
    <string name="agregando_gasto">Esta agregando un nuevo gasto</string>
    <string name="agregando_gasto_confirmacion">Esta seguro que desea crear este gasto? Esta accion no se puede deshacer.</string>
    <string name="imagen">Imagen</string>
    <string name="imagen_comprobante_gasto">Imagen comprobante gasto</string>
    <string name="seleccione_app">Seleccione la aplicacion</string>
    <string name="permiso_denegado_fotos">Permiso denegado, no se podran adjuntar fotos</string>
    <string name="errorUsuario">Hubo un error tratando de registrar el Usuario</string>
    <string name="usuarios_habilitados">Usuarios Habilitados</string>
    <string name="usuarios_deshabilitados">Usuarios Deshabilitados</string>
    <string name="usuarios_administradores">Usuarios Administradores</string>
    <string name="no_se_encontraron_usuarios">No se encontraron usuarios en busqueda</string>
    <string name="no_se_encontraron_gastos">No se encontraron gastos en busqueda</string>
    <string name="no_se_encontraron_camiones">No se camiones gastos en busqueda</string>
    <string name="usuarios_sin_camion">Usuarios sin camion</string>
    <string name="chof_tit">Dar de alta Conductor</string>
    <string name="chof_nombre">Nombre</string>
    <string name="chof_apellido">Apellido</string>
    <string name="chof_dni">DNI</string>
    <string name="chof_mail">Email</string>
    <string name="chof_contraseña">Contraseña</string>
    <string name="chof_camion">Asignar camion</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Viaje">Viaje</string>
    <string name="Categoria">Categoria</string>
    <string name="descripcion_vacia">La descripcion no puede estar vacia. Por favor vuelva a ingresar sus datos.</string>
    <string name="viajes_disponibles">Viajes Disponibles</string>
    <string name="no_se_encontraron_viajes_busqueda">No se encontraron viajes en esta busqueda</string>
    <string name="ok">Ok</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">Map</string>
    <string name="editar">Editar</string>
    <string name="title_activity_maps2">Map</string>
    <string name="seleccionar_fotografia">Abrir galeria</string>
    <string name="monto_1">Monto$$$</string>
    <string name="viaje">Viaje</string>
    <string name="categoria">Categoria</string>
    <string name="fecha">fecha</string>
    <string name="gasto_desestimado">Gasto Desestimado</string>
    <string name="gastos_1">Gastos</string>
    <string name="buscar_gasto">Buscar Gasto</string>
    <string name="no_hay_datos_1">No hay datos</string>
    <string name="asignacion_chofer">Asignacion Chofer</string>
    <string name="patente">Patente</string>
    <string name="descripcion_ej_mercedes_benz_2014">Descripcion (Ej: Mercedes Benz 2014.)</string>
    <string name="gastos_pendientes_de_sincronizacion">Gastos Pendientes de Sincronizacion</string>
    <string name="gastos_ingresados">Gastos Ingresados</string>
    <string name="gastos_pendientes_de_revision">Gastos Pendientes de Revision</string>
    <string name="no_se_encontraron_gastos_en_la_busqueda">No se encontraron gastos en la busqueda</string>
    <string name="buscar_por_categoria">Buscar por categoria</string>
    <string name="buscar_viaje">Buscar viaje</string>
    <string name="chofer_seleccionado_es">\El chofer seleccionado es </string>
    <string name="no_asignar_chofer_aun">No asignar chofer aun</string>
    <string name="esta_creando_camion">Esta cancelando la creacion de un camion</string>
    <string name="los_datos_guardados_se_perderan">Los datos no guardados se perderan. ¿Esta seguro que desea salir?</string>
    <string name="confirma_creacion_camion">¿Confirma la creacion de este camion?</string>
    <string name="patente_ya_existe">La patente de este camion ya existe.</string>
    <string name="sinc_info">Sincronizando Informacion</string>
    <string name="espere_un_momento">Espere un momento</string>
    <string name="camion_agregado_exito">Camion agregado con exito</string>
    <string name="ingresar_info_valida">Por favor, ingresar informacion valida</string>
    <string name="cancelando_creacion_camion">Esta cancelando la creacion de un camion</string>
    <string name="cancelando_edicion_camion">Esta cancelando la edicion de un camion</string>
    <string name="ingrese_monto_valido">Debe ingresar un monto valido</string>
    <string name="cancelando_creacion_usuario">Esta cancelando la creacion de un usuario</string>
    <string name="cancelando_editar_usuario">Esta cancelando la edicion de un usuario</string>
    <string name="usuario_existe">El Usuario ya existe!</string>
    <string name="cancelando_creacion_viaje">Esta cancelando la creacion de un viaje</string>
    <string name="cancelando_edicion_viaje">Esta cancelando la edición de un viaje</string>
    <string name="guardar_datos_viaje">¿Desea guardar los cambios en este viaje?</string>
    <string name="viajes_en_camino">Viajes en Camino</string>
    <string name="ver_mis_gastos">Ver mis Gastos</string>
</resources>