<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearcategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/choferGasto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/monto_1"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/montoGasto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/monto_1"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/viajeGasto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/viaje"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/categoriaGasto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_light"
                android:text="@string/categoria"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/fechaGasto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_light"
                android:text="@string/fecha"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/desestimadoGasto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/gasto_desestimado"
                android:textAlignment="center"
                android:textColor="@color/md_amber_900"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>