<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add.addViaje"
    android:onClick="hideKeyboard">


    <TextView
        android:id="@+id/tituloAltaViaje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/alta_nuevo_viaje"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/completar_campos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloAltaViaje" />


    <LinearLayout
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.078">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/seleccionar_conductor"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/choferViaje"
            android:layout_width="match_parent"
            android:layout_height="69dp" />

        <TextView
            android:id="@+id/indicadorChofer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="El chofer elegido es"
            android:textAlignment="gravity" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/destinoViaje"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/md_white_1000"
            android:ems="10"
            android:hint="@string/destino"
            android:inputType="textPersonName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="@color/md_white_1000"
                android:fontFamily="@font/roboto_light"
                android:singleLine="true" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/origenViaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/md_white_1000"
            android:ems="10"
            android:hint="@string/origen"
            android:inputType="textPersonName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:backgroundTint="@color/md_white_1000"
                android:fontFamily="@font/roboto_light"
                android:singleLine="true" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:onClick="agregarViajeConfirmacion"
            android:text="@string/dar_alta" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="122dp"
        android:layout_height="103dp"
        android:layout_marginTop="16dp"
        android:padding="7dp"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ruta" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="74dp"
        android:layout_height="52dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorBackground"
        android:onClick="volverAlMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_back" />


</androidx.constraintlayout.widget.ConstraintLayout>