<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Editar.editar_viaje_planeado"
    android:onClick="hideKeyboard">


    <TextView
        android:id="@+id/tituloEditViaje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/editar_viaje"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/completar_campos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloEditViaje" />


    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="372dp"
        android:layout_height="379dp"
        android:layout_marginTop="112dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.204">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/seleccionar_conductor"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/choferViaje"
            android:layout_width="match_parent"
            android:layout_height="76dp" />

        <TextView
            android:id="@+id/indicadorChofer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="El chofer seleccionado es"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/origenViaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/md_white_1000"
            android:ems="10"
            android:hint="@string/origen"
            android:inputType="textPersonName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_white_1000"
                android:fontFamily="@font/roboto_light" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/destinoViaje"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/md_white_1000"
            android:ems="10"
            android:hint="@string/destino"
            android:inputType="textPersonName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:backgroundTint="@color/md_white_1000"
                android:fontFamily="@font/roboto_light" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:onClick="editarViajeConfirmacion"
            android:text="@string/Guardar" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="106dp"
        android:layout_height="109dp"
        android:layout_marginEnd="16dp"
        android:tint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/camion" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="79dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorBackground"
        android:onClick="volverAlMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_back" />


</androidx.constraintlayout.widget.ConstraintLayout>